Pull up following revision(s) (requested by martin in ticket #16): 	sys/sys/cdefs.h: revision 1.90 PR 46040: If the current compiler doesn't support C99, check if it is compatible with GCC 2.92. In that case, use the protected __restricted__ form. In any other case, default to removing __restricted.